--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <ul>
         <li>
           <img
-            src="/images/team1.jpg"
+            src="./images/team1.jpg"
             width="270"
             height="260"
             alt="Чоловік в окулярах і бордовій сорочці"
@@ -102,7 +102,7 @@
         </li>
         <li>
           <img
-            src="/images/team2.jpg"
+            src="./images/team2.jpg"
             width="270"
             height="260"
             alt="Жінка в окулярах і чорному піджаку"
@@ -112,7 +112,7 @@
         </li>
         <li>
           <img
-            src="/images/team3.jpg"
+            src="./images/team3.jpg"
             width="270"
             height="260"
             alt="Чоловік у світлій сорочці"
@@ -122,7 +122,7 @@
         </li>
         <li>
           <img
-            src="/images/team4.jpg"
+            src="./images/team4.jpg"
             width="270"
             height="260"
             alt="Чоловік в окулярах і чорній футболці"
