--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <ul>
         <li>
           <img
-            src="/images/wedo1.jpg"
+            src="./images/wedo1.jpg"
             width="370"
             height="294"
             alt="Перетворення алгоритму блок-схеми у код"
@@ -71,7 +71,7 @@
         </li>
         <li>
           <img
-            src="/images/wedo2.jpg"
+            src="./images/wedo2.jpg"
             width="370"
             height="294"
             alt="Розробка мобільного дизайну"
@@ -79,7 +79,7 @@
         </li>
         <li>
           <img
-            src="/images/wedo3.jpg"
+            src="./images/wedo3.jpg"
             width="370"
             height="294"
             alt="Підбір оптимальної гами кольорів"
