--- a/index.html
+++ b/index.html
@@ -1,147 +1,125 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <a href="/"><span>Web</span><span>Studio</span></a>
+    <title>WebStudio</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="/"><span>WEB</span><span>STUDIO</span></a>
+        <ul>
+          <li><a href="/">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+      </nav>
       <ul>
-        <li><a href="/">Студія</a></li>
-        <li><a href="#">Портфоліо</a></li>
-        <li><a href="#">Команда</a></li>
-      </ul>
-    </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-  </header>
-  <main>
-    <section>
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button type="button">Замовити послугу</button>
-    </section>
-    <section>
-      <h2>Наші переваги</h2>
-      <ul>
-        <li>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p>
-            Ідейні міркування, і навіть початок повсякденної роботи з
-            формування позиції.
-          </p>
-        </li>
-        <li>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
-          <p>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне
-            у себе.
-          </p>
-        </li>
-        <li>
-          <h3>ПЛАНУВАННЯ</h3>
-          <p>
-            Так само консультація з широким активом значною мірою зумовлює.
-          </p>
-        </li>
-        <li>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Чим ми займаємося</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/wedo1.jpg"
-            width="370"
-            height="294"
-            alt="Перетворення алгоритму блок-схеми у код"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/wedo2.jpg"
-            width="370"
-            height="294"
-            alt="Розробка мобільного дизайну"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/wedo3.jpg"
-            width="370"
-            height="294"
-            alt="Підбір оптимальної гами кольорів"
-          />
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/team1.jpg"
-            width="270"
-            height="260"
-            alt="Чоловік в окулярах і бордовій сорочці"
-          />
-          <h3>Ігор Дем'яненко</h3>
-          <p lang="en">Product Designer</p>
-        </li>
-        <li>
-          <img
-            src="./images/team2.jpg"
-            width="270"
-            height="260"
-            alt="Жінка в окулярах і чорному піджаку"
-          />
-          <h3>Ольга Рєпіна</h3>
-          <p lang="en">Frontend Developer</p>
-        </li>
-        <li>
-          <img
-            src="./images/team3.jpg"
-            width="270"
-            height="260"
-            alt="Чоловік у світлій сорочці"
-          />
-          <h3>Микола Тарасов</h3>
-          <p lang="en">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/team4.jpg"
-            width="270"
-            height="260"
-            alt="Чоловік в окулярах і чорній футболці"
-          />
-          <h3>Михайло Єрмаков</h3>
-          <p lang="en">UI Designer</p>
-        </li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <a href="/"><span>Web</span><span>Studio</span></a>
-    <address>
-      <ul>
-        <li><a href='https://goo.gl/maps/CPtrU1FHBa2aNyZL9' target='_blank' rel='noopener noreferrer nofollow'>м. Київ, пр-т Лесі Украінки, 26</a></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
-    </address>
-  </footer>
-</body>
+    </header>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <h2>Our Benefits</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team1.jpg"
+              width="270"
+              height="260"
+              alt="Чоловік в окулярах і бордовій сорочці"
+            />
+            <h3>Ігор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team2.jpg"
+              width="270"
+              height="260"
+              alt="Жінка в окулярах і чорному піджаку"
+            />
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team3.jpg"
+              width="270"
+              height="260"
+              alt="Чоловік у світлій сорочці"
+            />
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team4.jpg"
+              width="270"
+              height="260"
+              alt="Чоловік в окулярах і чорній футболці"
+            />
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="/"><span>Web</span><span>Studio</span></a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Украінки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
