--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="/"><span>WEB</span><span>STUDIO</span></a>
+        <a href="/">WEB<span>STUDIO</span></a>
         <ul>
           <li><a href="/">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -59,67 +59,57 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
               src="./images/team1.jpg"
-              width="270"
+              width="264"
               height="260"
-              alt="Чоловік в окулярах і бордовій сорочці"
+              alt="A man with a short hairstyle and a thick beard in a white shirt"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
               src="./images/team2.jpg"
-              width="270"
+              width="264"
               height="260"
-              alt="Жінка в окулярах і чорному піджаку"
+              alt="A smiling man in a white shirt"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
               src="./images/team3.jpg"
-              width="270"
+              width="264"
               height="260"
-              alt="Чоловік у світлій сорочці"
+              alt="A woman in a pink sweater"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
               src="./images/team4.jpg"
-              width="270"
+              width="264"
               height="260"
-              alt="Чоловік в окулярах і чорній футболці"
+              alt="A smiling man in a gray T-shirt"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="/"><span>Web</span><span>Studio</span></a>
-      <address>
-        <ul>
-          <li>
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Украінки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <a href="/">WEB<span>STUDIO</span></a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
